# wasm4pm-autonomic

./: .gitignore  AALST_ADVERSARIAL_REVIEW_V2.md  AC_CRITERIA.md  AGENTS.md  AUTOML_RESULTS.md  CCOG_INSA_ARCHITECTURE.md  CCOG_REFACTORING_EVALUATION.md  COMMERCIAL.md  COMPILE_TIME_AUTOML_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DETERMINISM_AUDIT.md  DOD_VERIFICATION.md  DPIE_PR_FAQ.md  DPIE_Technical_Whitepaper_v1.1.0.aux  DPIE_Technical_Whitepaper_v1.1.0.out  DPIE_Technical_Whitepaper_v1.1.0.tex  DPIE_Technical_Whitepaper_v1.1.0.toc  DTEAM_PR_FAQ.md  DTEAM_Technical_Whitepaper_v1.0.0.lot  DTEAM_Technical_Whitepaper_v1.0.0.tex  DTEAM_Technical_Whitepaper_v1.1.0.lot  DTEAM_Technical_Whitepaper_v1.1.0.tex  DTEAM_Technical_Whitepaper_v1.2.0.lot  ENTERPRISE_WHITEPAPER.md  FORTUNE500_SUMMARY.md  GEMINI.md  HDIT_ANALYSIS_TEMPLATE.md  IDEAS.md  INDUSTRY_COMPARISON.md  LICENSE  ML_BENCHMARK.md  ML_INVENTORY.md  Makefile  Makefile.toml  PHILOSOPHY.md  PLAYGROUND_README.md  PORTING_SUMMARY.md  README.md  USE-GRANT.md  (+28 more)
.github/: CODEOWNERS
benches/: adversarial_topology_bench.rs  algorithm_bench.rs  bcinr_primitives_bench.rs  bitmask_replay_bench.rs  bpn_measurement_bench.rs  comparison_bench.rs  dteam_bench.rs  e2e_discovery_bench.rs  high_concurrency_update_bench.rs  instruction_stability_bench.rs  kernel_bench.rs  ktier_scalability_bench.rs  pdc_pipeline_bench.rs  real_data_bench.rs  reinforcement_bench.rs  scc_bench.rs  (+9 more)
crates/autoinstinct/: Cargo.toml  README.md  SPR.md
crates/autoinstinct/docs/: architecture.md  phases.md  pipeline_verification.md  wasm4pm-process-mining-reference.md
crates/autoinstinct/src/: align.rs  bridge.rs  causal.rs  causal_harness.rs  compile.rs  compliance.rs  corpus.rs  counterfactual.rs  doctrine.rs  doctrine_coverage.rs  domain.rs  drift.rs  gauntlet.rs  jtbd.rs  lib.rs  lifecycle.rs  manifest.rs  metamorphic.rs  motifs.rs  mutation.rs  ocel.rs  petri.rs  powl64_audit.rs  receipt_audit.rs  registry.rs  scale.rs  scorecard.rs  streaming.rs  synth.rs  world_gen.rs
crates/autoinstinct/src/llm/: admit.rs  config.rs  gemini_cli.rs  mod.rs  schema.rs
crates/autoinstinct/src/llm/prompts/: ocel_world.md
crates/autoinstinct/src/report/: admit.rs  diff.rs  evidence.rs  gemini.rs  mod.rs  prompt.rs  render.rs  schema.rs
crates/autoinstinct/tests/: anti_fake_causal.rs  anti_fake_differential.rs  anti_fake_doctrine.rs  anti_fake_gate.rs  anti_fake_lifestyle.rs  anti_fake_llm.rs  anti_fake_master.rs  anti_fake_packs.rs  anti_fake_perf.rs  anti_fake_report.rs  anti_fake_report_cli.rs  cli_smoke.rs  pipeline_e2e.rs
crates/ccog/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cleanup_powl8.py  clippy.toml  fix_byte.py  fix_circular.py  fix_clippy.py  fix_enums.py  fix_errors.py  fix_readme.py  fix_sec_readme.py  patch.py  patch2.py  patch_all.py  patch_all_lints.py  patch_construct8.py  patch_dendral.py  patch_dendral_fix.py  patch_domain.py  patch_eliza.py  patch_engine_ifs.py  patch_engine_kappa.py  patch_enums.py  patch_gps.py  patch_hearsay.py  patch_insa.py  patch_kappa.py  patch_main.py  patch_prolog.py  patch_resolution.py  patch_strips_byte.py  patch_tests.py  patch_unwraps.py  patch_witness.py  patch_xtask.py  patch_xtask_cargo.py  rust-toolchain.toml  write_eliza.py  (+9 more)
crates/ccog-bridge/: Cargo.toml  README.md
crates/ccog-bridge/src/: lib.rs  lib.rs.bak
crates/ccog/benches/: ccog_hot_path_bench.rs  dx_bench.rs  kernel_bench.rs  pack_dev_bench.rs  pack_edge_bench.rs  pack_enterprise_bench.rs  pack_lifestyle_bench.rs
crates/ccog/docs/: anti_fake_architecture.md
crates/ccog/src/: admit.rs  bark_artifact.rs  bark_kernel.rs  compiled.rs  compiled_hook.rs  conformance.rs  construct8.rs  facade.rs  field.rs  graph.rs  hooks.rs  ids.rs  instinct.rs  lib.rs  multimodal.rs  operation.rs  powl.rs  powl64.rs  receipt.rs  trace.rs  verdict.rs
crates/ccog/src/abi/: binary.rs  debug.rs  jsonld.rs  mod.rs
crates/ccog/src/breeds/: cbr.rs  dendral.rs  eliza.rs  gps.rs  hearsay.rs  mod.rs  mycin.rs  prolog.rs  prs.rs  shrdlu.rs  soar.rs  strips.rs
crates/ccog/src/export/: bundle.rs  jsonld.rs  mod.rs  ontology.rs  replay.rs  transparency.rs
crates/ccog/src/mask/: build.rs  ktier.rs  mod.rs  simd.rs
crates/ccog/src/packs/: bits.rs  dev.rs  edge.rs  enterprise.rs  ids.rs  lifestyle.rs  lifestyle_overlap.rs  metadata_ids.rs  mod.rs
crates/ccog/src/runtime/: a2a.rs  a2a_guard.rs  alignment.rs  coevo.rs  cog8.rs  conformance.rs  delta.rs  error.rs  event.rs  mcp.rs  mcp_guard.rs  mcp_transport.rs  mining.rs  mod.rs  ocel.rs  posture.rs  reentry.rs  scheduler.rs  self_play.rs  self_play_advanced.rs  self_play_adversarial.rs  soundness.rs  step.rs  xes.rs
crates/ccog/src/runtime/tournament/: cold_arena.rs  l1_arena.rs  l2_arena.rs  l3_arena.rs  mod.rs
crates/ccog/src/utils/: dense.rs  mod.rs
crates/ccog/tests/: a2a_delegation_tests.rs  adversarial_tournament.rs  decide_eq_with_trace.rs  dendral_bundle_roundtrip.rs  dendral_chain_test.rs  dense_drift.rs  earned_zero.rs  fuzz_hooks.rs  fuzz_kernel.rs  gauntlet.rs  hearsay_fusion_test.rs  hitl_role_tests.rs  hook_integration_test.rs  jtbd_generated.rs  kani_harnesses.rs  lifestyle_redesign_jtbd.rs  mcp_projection_tests.rs  pack_dev_conformance.rs  pack_edge_conformance.rs  pack_enterprise_conformance.rs  pack_lifestyle_conformance.rs  pack_namespace_isolation.rs  packs_jtbd.rs  police_report_flow.rs  powl64_abi_conformance.rs  powl64_chain_test.rs  powl8_admission_test.rs  prolog_relation_test.rs  proptest_construct8.rs  prov_delta_test.rs  runtime_step_test.rs  scheduler_tick_test.rs  self_play_tournament.rs  shrdlu_affordance_test.rs
crates/insa/insa-security/: Cargo.toml  README.md
crates/insa/insa-security/src/: lib.rs
crates/insa/insa-truthforge/: Cargo.toml  README.md
crates/insa/insa-truthforge/src/: admission.rs  gates.rs  lib.rs  mutation.rs  properties.rs
crates/insa/insa-truthforge/tests/: execute_gates.rs  jtbd_access_drift.rs  kappa8_engines.rs  kappa_dendral.rs  kappa_eliza.rs  kappa_hearsay.rs  kappa_mycin.rs  kappa_prolog.rs  kappa_shrdlu.rs  kappa_strips.rs  layout_gates.rs
(+1543 files in other folders)
