[package]
name = "dteam"
version = "1.3.0"
edition = "2021"
license = "BUSL-1.1"
description = "Deterministic Process Intelligence Engine (dteam) - Digital Team"

[workspace]

[dependencies]
log = "0.4"
bcinr = "26.4.18"
rustc-hash = "1.1.0"
fastrand = "2.1"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
hashbrown = "0.14"

[features]
default = ["token-based-replay"]
token-based-replay = []

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"
process_mining = "0.5.4"
dhat = "0.3.3"
iai-callgrind = "0.11.0"
divan = "0.1.14"
proptest = "1.2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ostar_bridge"
path = "src/bin/ostar_bridge.rs"

[[bin]]
name = "ralph"
path = "src/bin/ralph.rs"

[[bench]]
name = "reinforcement_bench"
harness = false

[[bench]]
name = "real_data_bench"
harness = false

[[bench]]
name = "algorithm_bench"
harness = false

[[bench]]
name = "dteam_bench"
harness = false

[[bench]]
name = "zero_allocation_bench"
harness = false

[[bench]]
name = "instruction_stability_bench"
harness = false

[[bench]]
name = "bcinr_primitives_bench"
harness = false

[[bench]]
name = "e2e_discovery_bench"
harness = false

[[bench]]
name = "ktier_scalability_bench"
harness = false

[[bench]]
name = "kernel_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "wasm_bridge_bench"
harness = false

[[bench]]
name = "adversarial_topology_bench"
harness = false

[[bench]]
name = "high_concurrency_update_bench"
harness = false

[[bench]]
name = "stochastic_noise_bench"
harness = false

[[bench]]
name = "vision_2030_bench"
harness = false
