[package]
name = "dteam"
version = "1.3.0"
edition = "2021"
license = "BUSL-1.1"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
description = "Deterministic Process Intelligence Engine (dteam) - Digital Team"
repository = "https://github.com/dteam-ai/dteam"
homepage = "https://dteam.ai"

[workspace]
members = ["crates/ccog", "crates/ccog-bridge", "crates/autoinstinct", "crates/insa/insa-types", "crates/insa/insa-hotpath", "crates/insa/insa-proof", "crates/insa/insa-truthforge"]

[dependencies]
unibit-globe = { path = "../unibit/crates/unibit-globe" }
unibit-lane = { path = "../unibit/crates/unibit-lane" }

unibit-powl = { path = "../unibit/crates/unibit-powl" }
unibit-graph = { path = "../unibit/crates/unibit-graph" }

unibit-kernel = { path = "../unibit/crates/unibit-kernel" }

log = "0.4"
env_logger = { version = "0.11", optional = true }
bcinr = "26.4.18"
rustc-hash = "1.1.0"
fastrand = "2.1"
itertools = "0.12"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"], optional = true }
tokio = { version = "1.52", features = ["full"], optional = true }
quick-xml = { version = "0.37", features = ["serialize"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"
blake2 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
hashbrown = "0.14"

[features]
default = ["token-based-replay"]
token-based-replay = []
# Enables live trace generation from conformance::trace_generator.
# Until that module is implemented, leave this feature off (stub stubs are used).
trace-generator = []
# Native platform support (uses tokio, rayon, OpenTelemetry) — required for non-WASM builds
native = ["dep:rayon", "dep:tokio", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry", "dep:tracing-opentelemetry", "dep:env_logger", "dep:tracing-subscriber"]

[dev-dependencies]
oxigraph = "0.4"

env_logger = "0.11"
criterion = "0.5"
tempfile = "3"
process_mining = "0.5.4"
dhat = "0.3.3"
iai-callgrind = "0.11.0"
divan = "0.1.14"
proptest = "1.2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
uuid = { version = "1.0", features = ["js"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[[bin]]
name = "pdc2025"
path = "src/bin/pdc2025.rs"
required-features = ["native"]

[[bin]]
name = "ostar_bridge"
path = "src/bin/ostar_bridge.rs"

[[bin]]
name = "ralph"
path = "src/bin/ralph.rs"

[[bin]]
name = "ml_bench"
path = "src/bin/ml_bench.rs"

[[bin]]
name = "dod"
path = "src/bin/dod.rs"

[[bin]]
name = "doctor"
path = "src/bin/doctor.rs"

[[bin]]
name = "plan_diff"
path = "src/bin/plan_diff.rs"

[[bin]]
name = "plan_schema"
path = "src/bin/plan_schema.rs"

[[bin]]
name = "plan_report"
path = "src/bin/plan_report.rs"

[[bin]]
name = "sr"
path = "src/bin/sr.rs"

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"

[[bin]]
name = "fortune500_playground"
path = "src/bin/fortune500_playground.rs"

[[bench]]
name = "reinforcement_bench"
harness = false

[[bench]]
name = "real_data_bench"
harness = false

[[bench]]
name = "algorithm_bench"
harness = false

[[bench]]
name = "dteam_bench"
harness = false

[[bench]]
name = "zero_allocation_bench"
harness = false

[[bench]]
name = "instruction_stability_bench"
harness = false

[[bench]]
name = "bcinr_primitives_bench"
harness = false

[[bench]]
name = "e2e_discovery_bench"
harness = false

[[bench]]
name = "ktier_scalability_bench"
harness = false

[[bench]]
name = "kernel_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "wasm_bridge_bench"
harness = false

[[bench]]
name = "adversarial_topology_bench"
harness = false

[[bench]]
name = "high_concurrency_update_bench"
harness = false

[[bench]]
name = "stochastic_noise_bench"
harness = false

[[bench]]
name = "vision_2030_bench"
harness = false

[[bench]]
name = "scc_bench"
harness = false

[[bench]]
name = "hot_path_performance_bench"
harness = false

[[bench]]
name = "universe64_bench"
harness = false

[[bench]]
name = "pdc_pipeline_bench"
harness = false

[[bench]]
name = "symbolic_learned_bench"
harness = false

[[bench]]
name = "bitmask_replay_bench"
harness = false

[[bench]]
name = "bpn_measurement_bench"
harness = false

[[bench]]
name = "vision_2030_e2e_bench"
harness = false
