[package]
name = "autoinstinct"
version = "30.1.1"
edition = "2021"
license = "BUSL-1.1"
authors = ["Sean Chatman <xpointsh@gmail.com>"]
description = "AutoInstinct: trace-to-instinct compiler for ccog Autonomic Instincts"

[dependencies]
ccog = { path = "../ccog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
blake3 = "1.5"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"], optional = true }

[features]
default = []
cli = ["dep:clap"]

[[bin]]
name = "ainst"
path = "src/bin/ainst.rs"
required-features = ["cli"]

[dev-dependencies]
proptest = "1.2"
fake = { version = "2.10", features = ["derive"] }
