[package]
name = "insa-security"
version = "0.1.0"
edition = "2021"
description = "Converged Security Closure rules and domain logic."
publish = false

[dependencies]
insa-types = { path = "../insa-types" }
insa-instinct = { path = "../insa-instinct" }
insa-kappa8 = { path = "../insa-kappa8" }
insa-hotpath = { path = "../insa-hotpath" }
