[package]
name = "insa-truthforge"
version = "0.1.0"
edition = "2021"

[dependencies]
insa-types = { path = "../insa-types" }
insa-hotpath = { path = "../insa-hotpath" }
insa-proof = { path = "../insa-proof" }
insa-security = { path = "../insa-security" }
insa-instinct = { path = "../insa-instinct" }

[dev-dependencies]
proptest = "1.2.0"
criterion = "0.5"
memoffset = "0.9"
